@@ -2,7 +2,7 @@ Title: Survival analysis, including penalised likelihood.
 Maintainer: Terry Therneau <therneau.terry@mayo.edu>
 Priority: recommended
 Package: survival
-Version: 2.36-5
+Version: 2.36-6
 Date: 2011-02-01
 Depends: stats, utils, graphics, splines, R (>= 2.10.0)
 LazyData: Yes
